// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Box Default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="box"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      Box
    </div>
  </div>
</div>
`;

exports[`Storyshots Button As 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <a
      as="a"
      className="button"
    >
      As a tag
    </a>
  </div>
</div>
`;

exports[`Storyshots Button Buttons Sizes 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons are-medium"
    >
      <button
        as="button"
        className="button"
      >
        All
      </button>
      <button
        as="button"
        className="button"
      >
        Medium
      </button>
      <button
        as="button"
        className="button"
      >
        Size
      </button>
    </div>
    <div
      className="buttons are-small"
    >
      <button
        as="button"
        className="button"
      >
        Small
      </button>
      <button
        as="button"
        className="button"
      >
        Small
      </button>
      <button
        as="button"
        className="button"
      >
        Small
      </button>
      <button
        as="button"
        className="button is-normal"
        size="normal"
      >
        Normal
      </button>
      <button
        as="button"
        className="button"
      >
        Small
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Colors 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons"
    >
      <button
        as="button"
        className="button is-white"
        color="white"
      >
        White
      </button>
      <button
        as="button"
        className="button"
        color="light"
      >
        Light
      </button>
      <button
        as="button"
        className="button is-dark"
        color="dark"
      >
        Dark
      </button>
      <button
        as="button"
        className="button is-black"
        color="black"
      >
        Black
      </button>
      <button
        as="button"
        className="button is-primary"
        color="primary"
      >
        Primary
      </button>
      <button
        as="button"
        className="button is-link"
        color="link"
      >
        Link
      </button>
      <button
        as="button"
        className="button is-info"
        color="info"
      >
        Info
      </button>
      <button
        as="button"
        className="button is-warning"
        color="warning"
      >
        Warning
      </button>
      <button
        as="button"
        className="button is-danger"
        color="danger"
      >
        Danger
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <button
      as="button"
      className="button"
    >
      Button
    </button>
  </div>
</div>
`;

exports[`Storyshots Button Disabled 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons"
    >
      <button
        as="button"
        className="button"
        disabled={true}
      >
        Disabled
      </button>
      <button
        as="button"
        className="button is-primary"
        color="primary"
        disabled={true}
      >
        Disabled
      </button>
      <button
        as="button"
        className="button is-link"
        color="link"
        disabled={true}
      >
        Disabled
      </button>
      <button
        as="button"
        className="button is-info"
        color="info"
        disabled={true}
      >
        Disabled
      </button>
      <button
        as="button"
        className="button is-success"
        color="success"
        disabled={true}
      >
        Disabled
      </button>
      <button
        as="button"
        className="button is-warning"
        color="warning"
        disabled={true}
      >
        Disabled
      </button>
      <button
        as="button"
        className="button is-danger"
        color="danger"
        disabled={true}
      >
        Disabled
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Fullwidth 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons"
    >
      <button
        as="button"
        className="button is-small is-fullwidth"
        fullwidth={true}
        size="small"
      >
        Small
      </button>
      <button
        as="button"
        className="button is-normal is-fullwidth"
        fullwidth={true}
        size="normal"
      >
        Normal
      </button>
      <button
        as="button"
        className="button is-medium is-fullwidth"
        fullwidth={true}
        size="medium"
      >
        Medium
      </button>
      <button
        as="button"
        className="button is-large is-fullwidth"
        fullwidth={true}
        size="large"
      >
        Large
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Invert Outlined 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="box has-background-primary"
    >
      <div
        className="buttons"
      >
        <button
          as="button"
          className="button is-primary is-outlined is-inverted"
          color="primary"
          inverted={true}
          outlined={true}
        >
          Primary
        </button>
        <button
          as="button"
          className="button is-link is-outlined is-inverted"
          color="link"
          inverted={true}
          outlined={true}
        >
          Link
        </button>
        <button
          as="button"
          className="button is-info is-outlined is-inverted"
          color="info"
          inverted={true}
          outlined={true}
        >
          Info
        </button>
        <button
          as="button"
          className="button is-warning is-outlined is-inverted"
          color="warning"
          inverted={true}
          outlined={true}
        >
          Warning
        </button>
        <button
          as="button"
          className="button is-danger is-outlined is-inverted"
          color="danger"
          inverted={true}
          outlined={true}
        >
          Danger
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Inverted 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons"
    >
      <button
        as="button"
        className="button is-primary is-inverted"
        color="primary"
        inverted={true}
      >
        Primary
      </button>
      <button
        as="button"
        className="button is-link is-inverted"
        color="link"
        inverted={true}
      >
        Link
      </button>
      <button
        as="button"
        className="button is-info is-inverted"
        color="info"
        inverted={true}
      >
        Info
      </button>
      <button
        as="button"
        className="button is-warning is-inverted"
        color="warning"
        inverted={true}
      >
        Warning
      </button>
      <button
        as="button"
        className="button is-danger is-inverted"
        color="danger"
        inverted={true}
      >
        Danger
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Light Colors 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons"
    >
      <button
        as="button"
        className="button is-primary is-light"
        color="primary"
        light={true}
      >
        Primary
      </button>
      <button
        as="button"
        className="button is-link is-light"
        color="link"
        light={true}
      >
        Link
      </button>
      <button
        as="button"
        className="button is-info is-light"
        color="info"
        light={true}
      >
        Info
      </button>
      <button
        as="button"
        className="button is-warning is-light"
        color="warning"
        light={true}
      >
        Warning
      </button>
      <button
        as="button"
        className="button is-danger is-light"
        color="danger"
        light={true}
      >
        Danger
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Loading 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons"
    >
      <button
        as="button"
        className="button is-loading"
        loading={true}
      >
        Loading
      </button>
      <button
        as="button"
        className="button is-primary is-loading"
        color="primary"
        loading={true}
      >
        Loading
      </button>
      <button
        as="button"
        className="button is-link is-loading"
        color="link"
        loading={true}
      >
        Loading
      </button>
      <button
        as="button"
        className="button is-info is-loading"
        color="info"
        loading={true}
      >
        Loading
      </button>
      <button
        as="button"
        className="button is-success is-loading"
        color="success"
        loading={true}
      >
        Loading
      </button>
      <button
        as="button"
        className="button is-warning is-loading"
        color="warning"
        loading={true}
      >
        Loading
      </button>
      <button
        as="button"
        className="button is-danger is-loading"
        color="danger"
        loading={true}
      >
        Loading
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Outlined 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons"
    >
      <button
        as="button"
        className="button is-primary is-outlined"
        color="primary"
        outlined={true}
      >
        Primary
      </button>
      <button
        as="button"
        className="button is-link is-outlined"
        color="link"
        outlined={true}
      >
        Link
      </button>
      <button
        as="button"
        className="button is-info is-outlined"
        color="info"
        outlined={true}
      >
        Info
      </button>
      <button
        as="button"
        className="button is-warning is-outlined"
        color="warning"
        outlined={true}
      >
        Warning
      </button>
      <button
        as="button"
        className="button is-danger is-outlined"
        color="danger"
        outlined={true}
      >
        Danger
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Rounded 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons"
    >
      <button
        as="button"
        className="button is-rounded"
        rounded={true}
      >
        Rounded
      </button>
      <button
        as="button"
        className="button is-primary is-rounded"
        color="primary"
        rounded={true}
      >
        Rounded
      </button>
      <button
        as="button"
        className="button is-link is-rounded"
        color="link"
        rounded={true}
      >
        Rounded
      </button>
      <button
        as="button"
        className="button is-info is-rounded"
        color="info"
        rounded={true}
      >
        Rounded
      </button>
      <button
        as="button"
        className="button is-success is-rounded"
        color="success"
        rounded={true}
      >
        Rounded
      </button>
      <button
        as="button"
        className="button is-danger is-rounded"
        color="danger"
        rounded={true}
      >
        Rounded
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Sizes 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons"
    >
      <button
        as="button"
        className="button is-small"
        size="small"
      >
        Small
      </button>
      <button
        as="button"
        className="button"
      >
        Default
      </button>
      <button
        as="button"
        className="button is-normal"
        size="normal"
      >
        Normal
      </button>
      <button
        as="button"
        className="button is-medium"
        size="medium"
      >
        Medium
      </button>
      <button
        as="button"
        className="button is-large"
        size="large"
      >
        Large
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button States 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      className="buttons"
    >
      <button
        as="button"
        className="button"
      >
        Normal
      </button>
      <button
        as="button"
        className="button is-hovered"
        hovered={true}
      >
        Hovered
      </button>
      <button
        as="button"
        className="button is-focused"
        focused={true}
      >
        Focused
      </button>
      <button
        active={true}
        as="button"
        className="button is-active"
      >
        Active
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Button Static 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <button
      as="button"
      className="button is-static"
      static={true}
    >
      Static
    </button>
  </div>
</div>
`;

exports[`Storyshots Columns Default 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="columns"
      style={
        Object {
          "textAlign": "center",
          "width": "60vw",
        }
      }
    >
      <div
        as="div"
        className="column"
      >
        <p
          className="has-background-primary has-text-white"
          style={
            Object {
              "padding": "0.5rem 1rem",
            }
          }
        >
          First column
        </p>
      </div>
      <div
        as="div"
        className="column"
      >
        <p
          className="has-background-primary has-text-white"
          style={
            Object {
              "padding": "0.5rem 1rem",
            }
          }
        >
          Second column
        </p>
      </div>
      <div
        as="div"
        className="column"
      >
        <p
          className="has-background-primary has-text-white"
          style={
            Object {
              "padding": "0.5rem 1rem",
            }
          }
        >
          Third column
        </p>
      </div>
      <div
        as="div"
        className="column"
      >
        <p
          className="has-background-primary has-text-white"
          style={
            Object {
              "padding": "0.5rem 1rem",
            }
          }
        >
          Fourth column
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots withColor Has Background 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="box has-background-primary"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      has-background-primary
    </div>
  </div>
</div>
`;

exports[`Storyshots withColor Has Text 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="box has-text-primary"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      has-text-primary
    </div>
  </div>
</div>
`;

exports[`Storyshots withOther Clearfix 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="box is-clearfix"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-clearfix
    </div>
  </div>
</div>
`;

exports[`Storyshots withOther Clipped 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="box is-clipped"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-overlay
    </div>
  </div>
</div>
`;

exports[`Storyshots withOther Overlay 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="box is-overlay"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-overlay
    </div>
  </div>
</div>
`;

exports[`Storyshots withOther Pulled Left 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="box is-pulled-left"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-pulled-left
    </div>
  </div>
</div>
`;

exports[`Storyshots withOther Pulled Right 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="box is-pulled-right"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-pulled-right
    </div>
  </div>
</div>
`;

exports[`Storyshots withOther Radiusless 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="box is-radiusless"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-radiusless
    </div>
  </div>
</div>
`;

exports[`Storyshots withOther Relative 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="box is-relative"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-relative
    </div>
  </div>
</div>
`;

exports[`Storyshots withOther Shadowless 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="box is-shadowless"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-shadowless
    </div>
  </div>
</div>
`;

exports[`Storyshots withOther Unselectable 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="box is-unselectable"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-unselectable
    </div>
  </div>
</div>
`;

exports[`Storyshots withResponsive Hidden 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="box is-hidden"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-hidden
    </div>
  </div>
</div>
`;

exports[`Storyshots withResponsive Invisible 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="box is-invisible"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-invisible
    </div>
  </div>
</div>
`;

exports[`Storyshots withResponsive Is Flex 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="box is-flex"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-flex
    </div>
  </div>
</div>
`;

exports[`Storyshots withResponsive Is Flex Mobile 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="box is-flex-mobile"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-flex-mobile
    </div>
  </div>
</div>
`;

exports[`Storyshots withResponsive Sr Only 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="box is-sr-only"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      is-sr-only
    </div>
  </div>
</div>
`;

exports[`Storyshots withSpacing Margin Top 6 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="box mt-6"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      margin-top-6
    </div>
  </div>
</div>
`;

exports[`Storyshots withSpacing Padding Top 6 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "bottom": "0",
      "display": "flex",
      "left": "0",
      "overflow": "auto",
      "position": "fixed",
      "right": "0",
      "top": "0",
    }
  }
>
  <div
    style={
      Object {
        "margin": "auto",
        "maxHeight": "100%",
      }
    }
  >
    <div
      as="div"
      className="box pt-6"
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "height": 380,
          "justifyContent": "center",
          "width": 540,
        }
      }
    >
      padding-top-6
    </div>
  </div>
</div>
`;
